Fix 403 error for admin users page - Update user-service SecurityConfig
- Changed user-service SecurityConfig to permit all requests (authentication handled by API Gateway)
- Updated CORS configuration to use allowedOriginPatterns and allowCredentials
- Disabled form login and HTTP basic auth
- Fixes issue where admin users couldn't access /api/users endpoint